k8s/ai-v1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-v1-model-app
  namespace: ai-project 
spec:
  replicas: 2   
  selector:
    matchLabels:
      app: ai-v1-model-app
  template:
    metadata:
      labels:
        app: ai-v1-model-app
    spec:
      containers:
        - name: ai-v1-model-app
          image: sk09devops/ai-v1:latest-36
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:  
            limits:
              cpu: 500m  
              memory: 512Mi  
            requests:
              cpu: 200m   
              memory: 256Mi   

---

# Service
apiVersion: v1
kind: Service
metadata:
  name: ai-v1-model-app-svc
  namespace: ai-project
spec:
  selector:
    app: ai-v1-model-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
