k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service-app
  namespace: ai-project 
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: api-service-app
  template:
    metadata:
      labels:
        app: api-service-app
    spec:
      containers:
        - name: api-service-app
          image: sk09devops/ai-project:latest-49
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:   
            limits:
              cpu: 500m   
              memory: 512Mi  
            requests:
              cpu: 200m   
              memory: 256Mi   

---

# Service
apiVersion: v1
kind: Service
metadata:
  name: api-service-svc
  namespace: ai-project
spec:
  selector:
    app: api-service-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer  # Expose the service outside the cluster
