k8s/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: ai-project
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aiextension.westus2.cloudapp.azure.com  
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service-svc 
            port:
              number: 80
