k8s/cloudgateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-gateway-app
spec:
  selector:
    matchLabels:
      app: cloud-gateway-app
  template:
    metadata:
      labels:
        app: cloud-gateway-app
    spec:
      containers:
        - name: cloud-gateway-app
          image: sk09devops/cloud-gateway:latest

          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-gateway-svc
spec:
  type: ClusterIP
  selector:
    app: cloud-gateway-app
  ports:
    - port: 80
      targetPort: 9090

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-gateway-ingress
  namespace: ai-project
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aiextension.westus2.cloudapp.azure.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-gateway-svc
            port:
              number: 80
