k8s/scrapper-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper-service-app
  namespace: ai-project 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper-service-app
  template:
    metadata:
      labels:
        app: scraper-service-app
    spec:
      containers:
        - name: scrapper-service-app
          image: sk09devops/scrapper-api:latest-19 
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: scraper-service-svc
  namespace: ai-project
spec:
  selector:
    app: scraper-service-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scraper-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: aiextension.westus2.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scraper-service-svc
            port:
              number: 80
